--- a/libs/styles/themes/_dark.scss
+++ b/libs/styles/themes/_dark.scss
@@ -3,6 +3,7 @@
     --text-weak: #cccccc;
     --text-hint: #999999;
     --text-disabled: #666666;
+    --text-invert: #161616;
 
     --background-default: #0e0d12;
     --background-weak: #1e1c24;
