--- a/libs/styles/themes/_light.scss
+++ b/libs/styles/themes/_light.scss
@@ -4,11 +4,92 @@
     --text-weak: #4d4d4d;
     --text-hint: #666666;
     --text-disabled: #767676;
+    --text-invert: #ffffff;
 
     --background-default: #ffffff;
-    --background-weak: #f6f6f6;
+    --background-weak: #f2f2f2;
     --background-strong: #e6e6e6;
 
     --border-default: #d1cfcd;
     --border-weak: #eae7e4;
+
+
+    --color-primary-100: #fffac7;
+    --color-primary-200: #fff58e;
+    --color-primary-300: #fff155;
+    --color-primary-400: #ffe822;
+    --color-primary-500: #ffe64b;
+    --color-primary-600: #f2d63e;
+    --color-primary-700: #e6c932;
+    --color-primary-800: #dba726;
+    --color-primary-900: #cf9c1a;
+    --color-primary-1000: #c3830e;
+
+    --color-success-100: #e8f5d4;
+    --color-success-200: #d1ebaa;
+    --color-success-300: #b9e181;
+    --color-success-400: #a2d757;
+    --color-success-500: #9ed24d;
+    --color-success-600: #8ac842;
+    --color-success-700: #77bd37;
+    --color-success-800: #63b32d;
+    --color-success-900: #4f9e23;
+    --color-success-1000: #3b8918;
+
+    --color-info-100: #edf7ff;
+    --color-info-200: #cbe8ff;
+    --color-info-300: #a7d9ff;
+    --color-info-400: #83cbff;
+    --color-info-500: #5fbcff;
+    --color-info-600: #4ba7e6;
+    --color-info-700: #3893c2;
+    --color-info-800: #257e9e;
+    --color-info-900: #136a7a;
+    --color-info-1000: #005656;
+
+    --color-warning-100: #fff4db;
+    --color-warning-200: #ffddb3;
+    --color-warning-300: #ffc68c;
+    --color-warning-400: #ffb064;
+    --color-warning-500: #ffa33d;
+    --color-warning-600: #e68c35;
+    --color-warning-700: #cc742e;
+    --color-warning-800: #b35b26;
+    --color-warning-900: #99531f;
+    --color-warning-1000: #803b17;
+
+    --color-danger-100: #ffdbdb;
+    --color-danger-200: #ffb7b7;
+    --color-danger-300: #ff9393;
+    --color-danger-400: #ff6f6f;
+    --color-danger-500: #ff4d4d;
+    --color-danger-600: #e63e3e;
+    --color-danger-700: #cc3232;
+    --color-danger-800: #b32626;
+    --color-danger-900: #991a1a;
+    --color-danger-1000: #801414;
+
+    --color-weak-100: #e4e4e4;
+    --color-weak-200: #dcdcdc;
+    --color-weak-300: #d4d4d4;
+    --color-weak-400: #cccccc;
+    --color-weak-500: #c0c0c0;
+    --color-weak-600: #b4b4b4;
+    --color-weak-700: #a8a8a8;
+    --color-weak-800: #9c9c9c;
+    --color-weak-900: #909090;
+    --color-weak-1000: #8c8c8c;
+
+    --color-primary: #ffe64b;
+    --color-weak: #d1d1d1;
+    --color-danger: #dc3251;
+    --color-warning: #ff9900;
+    --color-success: #168368;
+    --color-info: #1d4ed8;
+
+    --primary-color100: #ffed7e;
+    --primary-color: #ffe64b;
+    --primary-color600: #fadf30;
+    --primary-color700: #eac800;
+    --primary-color-text: #000000;
 }
