add Loader component

--- a/libs/styles/base/_index.scss
+++ b/libs/styles/base/_index.scss
@@ -1,5 +1,6 @@
 @import "./init";
 @import "./reset";
 @import "./animation";
+@import "./scrollbar";
 @import "./tailwind";
 @import "./typography";
