--- a/libs/styles/themes/_dark.scss
+++ b/libs/styles/themes/_dark.scss
@@ -12,4 +12,6 @@
     --border-default: #dddddd;
     --border-weak: #777777;
 
+    --scrollbar-thumb-color: rgb(255 255 255 / 0.2);
+    --scrollbar-thumb-hover-color: rgb(255 255 255 / 0.5);
 }
