--- a/libs/styles/themes/_light.scss
+++ b/libs/styles/themes/_light.scss
@@ -92,4 +92,7 @@
     --primary-color600: #fadf30;
     --primary-color700: #eac800;
     --primary-color-text: #000000;
+
+    --scrollbar-thumb-color: rgb(0 0 0 / 0.35);
+    --scrollbar-thumb-hover-color: rgb(0 0 0 / 0.5);
 }
