--- a/libs/components/input/Input.scss
+++ b/libs/components/input/Input.scss
@@ -13,6 +13,12 @@
         border-color: var(--color-primary-600);
     }
 
+    &.disabled {
+        pointer-events: none;
+        color: var(--text-weak, inherit);
+        opacity: .5;
+    }
+
     .input-element {
         padding: .5rem .5rem;
         flex: 1;
@@ -26,4 +32,5 @@
     .adornment {
         color: var(--color-weak-600);
     }
+
 }
