--- a/libs/components/tooltip/Tooltip.scss
+++ b/libs/components/tooltip/Tooltip.scss
@@ -1,111 +1,1 @@
-.ll-tooltip {
-
-    .box {
-        background-color: white;
-
-        border-radius: var(--border-radius-sm);
-        padding: .25rem .5rem;
-        box-shadow: var(--shadow);
-        position: relative;
-        z-index: 2;
-    }
-
-    .arrow {
-        position: absolute;
-        display: block;
-        width: 12px;
-        height: 12px;
-        transform: rotate(45deg);
-    }
-
-    .arrow-bg {
-        background-color: white;
-        z-index: 3;
-    }
-
-    .arrow-shadow {
-        box-shadow: var(--shadow);
-        z-index: 1;
-    }
-
-    @each $colorType in (success, info, warning, danger) {
-        &.type-#{$colorType} {
-            .box {
-                background-color: var(--color-#{$colorType}-300);
-                color: var(--color-#{$colorType}-900);
-            }
-
-            .arrow-bg {
-                background-color: var(--color-#{$colorType}-300);
-            }
-        }
-    }
-
-    @each $colorType in (primary, weak) {
-        &.type-#{$colorType} {
-            .box {
-                background-color: var(--color-#{$colorType}-300);
-                color: var(--text-default);
-            }
-
-            .arrow-bg {
-                background-color: var(--color-#{$colorType}-300);
-            }
-        }
-    }
-
-    &[data-status='initial'],
-    &[data-status='close'] {
-        opacity: 0;
-        transform: scale(.9);
-    }
-
-    &[data-status='open'],
-    &[data-status='close'] {
-        transition: opacity 250ms ease, transform 250ms ease;
-    }
-
-    &[class*="top"] {
-        .arrow {
-            border-bottom-right-radius: 3px;
-        }
-
-        &[data-status='open'],
-        &[data-status='close'] {
-            transform-origin: bottom center;
-        }
-    }
-
-    &[class*="bottom"] {
-        .arrow {
-            border-top-left-radius: 3px;
-        }
-
-        &[data-status='open'],
-        &[data-status='close'] {
-            transform-origin: top center;
-        }
-    }
-
-    &[class*="left"] {
-        .arrow {
-            border-top-right-radius: 3px;
-        }
-
-        &[data-status='open'],
-        &[data-status='close'] {
-            transform-origin: center right;
-        }
-    }
-
-    &[class*="right"] {
-        .arrow {
-            border-bottom-left-radius: 3px;
-        }
-
-        &[data-status='open'],
-        &[data-status='close'] {
-            transform-origin: center left;
-        }
-    }
-}
+.ll-tooltip {}
