--- a/extra/shared/components/code/Code.scss
+++ b/extra/shared/components/code/Code.scss
@@ -1,4 +1,4 @@
-.code {
+.ll-code {
     border: 1px solid var(--border-default);
     background-color: var(--background-weak);
     padding: 0 .25rem;
