--- a/extra/shared/components/input/Input.scss
+++ b/extra/shared/components/input/Input.scss
@@ -1,4 +1,4 @@
-.input {
+.ll-input {
     border-radius: var(--border-radius-md);
     transition: all .3s ease;
     border: solid 1px var(--color-weak-100);
