--- a/extra/shared/styles/base/_tailwind.scss
+++ b/extra/shared/styles/base/_tailwind.scss
@@ -1,3 +1,10 @@
+@each $label,
+$size in $text-sizes {
+    .text-#{$label} {
+        font-size: pixel-to-rem($size);
+    }
+}
+
 $color-names: "default", "weak", "hint", "disabled";
 
 @each $color-name in $color-names {
