--- a/extra/shared/components/badge/Badge.scss
+++ b/extra/shared/components/badge/Badge.scss
@@ -4,17 +4,17 @@
     box-shadow: var(--shadow-light);
     padding: 0 .5rem;
 
-    @each $colorType in (success, info, warning, danger) {
-        &.type-#{$colorType} {
-            background-color: var(--color-#{$colorType}-300);
-            color: var(--color-#{$colorType}-900);
-        }
-    }
+    background-color: var(--button-default-background-color);
+    color: var(--button-default-text-color);
+    transition: all .3s ease, outline 0s;
 
-    @each $colorType in (primary, weak) {
-        &.type-#{$colorType} {
-            background-color: var(--color-#{$colorType}-300);
-            color: var(--text-default);
+    .ll-href & {
+        &:hover {
+            background-color: var(--button-hover-background-color);
+        }
+
+        &:active {
+            background-color: var(--button-active-background-color);
         }
     }
 }
