--- a/extra/shared/components/loader/Loader.scss
+++ b/extra/shared/components/loader/Loader.scss
@@ -1,6 +1,6 @@
 @use 'sass:math';
 
-.loader {
+.ll-loader {
     $total-length: 43.699; // total length of path, calculated by getTotalLength() in JS
     $looping-percent: 40;
     $looping-length: math.div($looping-percent * $total-length, 100);
