component Select fix required open popover

--- a/extra/shared/styles/base/_tailwind.scss
+++ b/extra/shared/styles/base/_tailwind.scss
@@ -47,6 +47,14 @@ $sizes: 1, 2, 3, 4, 8;
     }
 }
 
+.ml-auto {
+    margin-left: auto;
+}
+
+.mr-auto {
+    margin-right: auto;
+}
+
 .w100 {
     width: 100%;
 }
