--- a/extra/shared/styles/themes/_light.scss
+++ b/extra/shared/styles/themes/_light.scss
@@ -7,7 +7,8 @@
     --text-invert: #ffffff;
 
     --background-default: #ffffff;
-    --background-weak: #f2f2f2;
+    --background-light: #f2f2f2;
+    --background-weak: #ebebeb;
     --background-strong: #e6e6e6;
 
     --border-default: #d1cfcd;
