component Autocomplete, add lazy feature

--- a/extra/shared/components/autocomplete/Autocomplete.scss
+++ b/extra/shared/components/autocomplete/Autocomplete.scss
@@ -1,6 +1,9 @@
 .ll-autocomplete-dialog {
+    height: 100%;
+    pointer-events: none;
 
     .box {
+        pointer-events: all;
         border-radius: var(--border-radius-md);
         outline: 0;
         position: relative;
