add fontello icons

--- a/extra/shared/styles/base/_typography.scss
+++ b/extra/shared/styles/base/_typography.scss
@@ -24,15 +24,28 @@ $size in $title-sizes {
 
 
 a {
-    color: var(--color-primary-900);
+    color: var(--color-primary-800);
     text-decoration: underline;
     text-decoration-color: var(--color-primary-500);
     text-decoration-thickness: 1px;
     transition: text-decoration-color .3s ease;
 
+    &:visited {
+        color: var(--color-primary-1000);
+
+    }
+
     &:hover {
         text-decoration-color: var(--color-primary-600);
         text-decoration-thickness: 2px;
+    }
+
+    &:focus-within {
+        outline: 2px solid var(--color-primary-1000);
+    }
+
+    &:active {
+        color: var(--text-weak);
     }
 }
 
