--- a/extra/shared/components/badge/Badge.scss
+++ b/extra/shared/components/badge/Badge.scss
@@ -2,19 +2,40 @@
     border-radius: var(--border-radius-md);
     width: fit-content;
     box-shadow: var(--shadow-light);
-    padding: 0 .5rem;
 
-    background-color: var(--button-default-background-color);
     color: var(--button-default-text-color);
     transition: all .3s ease, outline 0s;
+    overflow: hidden;
+    display: inline-flex;
+    align-items: stretch;
 
-    .ll-href & {
+    .inner {
+        padding: 0 .5rem;
+        background-color: var(--button-default-background-color);
+    }
+
+    button {
+        transition: all .3s ease, outline 0s;
+
         &:hover {
             background-color: var(--button-hover-background-color);
         }
 
         &:active {
             background-color: var(--button-active-background-color);
+        }
+    }
+
+
+    .remove {
+        border-top-right-radius: var(--border-radius-md);
+        border-bottom-right-radius: var(--border-radius-md);
+        padding: 0 .25rem 0 .125rem;
+        // margin-left: .25rem;
+        background-color: var(--button-default-background-color);
+
+        &:hover {
+            background-color: var(--button-hover-background-color);
         }
     }
 }
