--- a/extra/shared/components/dialog/Dialog.scss
+++ b/extra/shared/components/dialog/Dialog.scss
@@ -67,12 +67,9 @@
     @each $colorType in (success, info, warning, danger, primary, weak) {
         &.type-#{$colorType} {
             .box {
-                background-color: var(--color-#{$colorType}-300);
+                border-color: var(--color-#{$colorType}-300);
+                border-style: solid;
                 color: var(--color-#{$colorType}-text);
-            }
-
-            .arrow-bg {
-                background-color: var(--color-#{$colorType}-300);
             }
         }
     }
@@ -97,6 +94,10 @@
     }
 
     &[class*="top"] {
+        .box {
+            border-top-width: 4px;
+        }
+
         .arrow {
             border-bottom-right-radius: 3px;
         }
@@ -108,6 +109,10 @@
     }
 
     &[class*="bottom"] {
+        .box {
+            border-bottom-width: 4px;
+        }
+
         .arrow {
             border-top-left-radius: 3px;
         }
@@ -119,6 +124,10 @@
     }
 
     &[class*="left"] {
+        .box {
+            border-left-width: 4px;
+        }
+
         .arrow {
             border-top-right-radius: 3px;
         }
@@ -130,6 +139,10 @@
     }
 
     &[class*="right"] {
+        .box {
+            border-right-width: 4px;
+        }
+
         .arrow {
             border-bottom-left-radius: 3px;
         }
