--- a/extra/shared/styles/base/_typography.scss
+++ b/extra/shared/styles/base/_typography.scss
@@ -58,3 +58,8 @@ a.ghost {
         text-decoration: none;
     }
 }
+
+em {
+    background-color: var(--color-primary-200);
+    color: var(--text-strong);
+}
