--- a/extra/shared/styles/themes/_light.scss
+++ b/extra/shared/styles/themes/_light.scss
@@ -1,5 +1,6 @@
 :root,
 .ui-light {
+    --text-strong: #000000;
     --text-default: #161616;
     --text-weak: #4d4d4d;
     --text-hint: #666666;
