--- a/apps/storybook/.storybook/storybook.scss
+++ b/apps/storybook/.storybook/storybook.scss
@@ -3,3 +3,24 @@
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 2rem;
 }
+
+.storybook-icon-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+    gap: 1rem;
+    margin-top: 1rem;
+
+    &>div {
+        border: 1px solid var(--color-weak-100);
+        border-radius: var(--border-radius-md);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding: .5rem;
+
+        i {
+            font-size: 2.5rem;
+        }
+    }
+}
