--- a/extra/shared/components/autocomplete/Autocomplete.scss
+++ b/extra/shared/components/autocomplete/Autocomplete.scss
@@ -1,34 +1,28 @@
 .ll-autocomplete-dialog {
-    height: 100%;
-    pointer-events: none;
-
-    .box {
-        pointer-events: all;
-        border-radius: var(--border-radius-md);
-        outline: 0;
-        position: relative;
-        max-height: 100%;
-        overflow: auto;
-        display: flex;
-        flex-direction: column;
-    }
 
     .option {
-        padding: .5rem .5rem;
-        text-align: left;
-        outline: 0;
 
-        &:hover {
-            background-color: var(--background-light);
-        }
+        &.search {
+            display: flex;
+            height: 64px;
+            padding: 0;
 
-        &.active {
-            background-color: var(--background-weak);
-        }
+            .icon {
+                width: 64px;
+                font-size: 2rem;
+            }
 
-        &.selected {
-            background-color: var(--background-strong);
-            font-weight: bold;
+            .content {
+                padding: 0 .5rem;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+            }
+
+            .hint {
+                color: var(--text-hint);
+                font-size: .8rem;
+            }
         }
     }
 }
