components add Checkbox/RadioGroup/Toggle

--- a/extra/shared/components/input/Input.scss
+++ b/extra/shared/components/input/Input.scss
@@ -12,6 +12,7 @@
     }
 
     &:focus-within {
+        box-shadow: var(--ring-shadow-light);
         border-color: var(--color-primary-600);
     }
 
