--- a/extra/shared/components/input/Toggle.scss
+++ b/extra/shared/components/input/Toggle.scss
@@ -38,6 +38,23 @@
         }
     }
 
+
+    &.warning {
+        border-color: var(--color-warning-600);
+
+        &::after {
+            border-color: var(--color-warning-600);
+        }
+    }
+
+    &.error {
+        border-color: var(--color-danger-600);
+
+        &::after {
+            border-color: var(--color-danger-600);
+        }
+    }
+
     &:focus {
         box-shadow: var(--ring-shadow-light);
     }
