--- a/extra/shared/styles/vars/_spacing.scss
+++ b/extra/shared/styles/vars/_spacing.scss
@@ -5,6 +5,7 @@
     --space-2: 0.5rem;
     --space-3: .75rem;
     --space-4: 1rem;
+    --space: 1rem;
     --space-8: 2rem;
     --space-12: 3rem;
 
