--- a/extra/shared/styles/base/_index.scss
+++ b/extra/shared/styles/base/_index.scss
@@ -2,6 +2,7 @@
 @import "./reset";
 @import "./animation";
 @import "./scrollbar";
+@import "./layout";
 @import "./tailwind";
 @import "./typography";
 @import "./font";
