--- a/extra/shared/styles/themes/_light.scss
+++ b/extra/shared/styles/themes/_light.scss
@@ -22,7 +22,7 @@
     --color-primary-400: #ffe822;
     --color-primary-500: #ffe64b;
     --color-primary: #ffe64b;
-    --color-primary-600: #020202;
+    --color-primary-600: #f2d63e;
     --color-primary-700: #e6c932;
     --color-primary-800: #dba726;
     --color-primary-900: #cf9c1a;
