--- a/extra/shared/components/button/Button.scss
+++ b/extra/shared/components/button/Button.scss
@@ -24,6 +24,7 @@
 
         &:focus {
             border-color: var(--button-focus-border-color);
+            z-index: 2;
 
             &.shape-solid {
                 box-shadow: var(--shadow-md);
@@ -40,8 +41,11 @@
 
         }
 
-        &:active {
+        &:active,
+        &.selected {
             box-shadow: var(--shadow-light-md);
+            background-color: var(--button-active-background-color);
+            z-index: 1;
 
             &.shape-solid {
                 box-shadow: var(--shadow-lg);
@@ -62,7 +66,8 @@
         color: var(--button-hover-text-color);
     }
 
-    &:active {
+    &:active,
+    &.selected {
         color: var(--button-active-text-color);
     }
 
@@ -82,6 +87,10 @@
 
     &.shape-solid {
         box-shadow: var(--shadow);
+    }
+
+    &:focus-visible {
+        outline: 2px solid var(--button-focus-visible-border-color);
     }
 
     &.not-cliquable {
@@ -108,10 +117,6 @@
         &:active {
             color: var(--text-default);
         }
-
-        // i {
-        //     margin-bottom: 2px;
-        // }
 
         &.shape-underline {
             color: var(--text-hint);
